cluster/base/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
spec:
  type: ClusterIP
  selector:
    app: freshrss
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
